--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.0.3",
+    "@tiptap/pm": "^2.3.2",
+    "@tiptap/react": "^2.3.2",
+    "@tiptap/starter-kit": "^2.3.2",
+    "antd": "^5.17.0",
+    "lucide-react": "^0.378.0",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.3"
